--- a/mall-web/src/main/webapp/Css/layout.css
+++ b/mall-web/src/main/webapp/Css/layout.css
@@ -3,7 +3,7 @@ html{margin:0;padding:0;border:0;-webkit-text-size-adjust:100%;-ms-text-size-adj
 body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, code, del, dfn, em, q, dl, dt, dd, ol, ul, li, input, fieldset, form, legend, caption, tbody, tfoot, thead, article, aside, dialog, figure, footer, header, hgroup, nav, section{margin:0;padding:0;border:0;font-size:14px;font:inherit;vertical-align:baseline;}
 article, aside, details, figcaption, figure, dialog, footer, header, hgroup, menu, nav, section{display:block;}
 body{font-size:12px;color:#000;background:#fff;font-family:"Microsoft YaHei","simsun","Helvetica Neue", Arial, Helvetica, sans-serif;}
-.td img{border:1px solid #333;width: 226px}
+img{border:0;}
 ::-webkit-input-placeholder{color:#999;}
 :-moz-placeholder{color:#999;}
 ::-moz-placeholder{color:#999;}
