--- a/mall-web/src/main/webapp/Css/style.css
+++ b/mall-web/src/main/webapp/Css/style.css
@@ -348,7 +348,7 @@ label{cursor: pointer;}
 .margin-super-top{margin-top:50px;}
 .margin-large-35{margin-right:35px;}
 .margin-top-35{margin-top:35px;}
-.margin-top-25{margin-top:25px;}
+.margin-top-25{margin-top:25px;float: left;width: 50%;}
 .margin-tb-25{margin:25px 0;}
 .margin-large-tb{margin:30px 0;}
 
